<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         
            android:background="@drawable/survey"
            android:gravity="center_horizontal"
            android:paddingBottom="30dp"
            android:paddingTop="50dp"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/stopbang1question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb1"
             android:layout_marginLeft="3dp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
           >

            <RadioButton
                android:id="@+id/Activity_Question_nose_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/Activity_Question_nose_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/stopbang2question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb2"
              android:layout_marginLeft="3dp" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/Activity_Question_fatigue_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/Activity_Question_fatigue_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/stopbang3question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb3" 
              android:layout_marginLeft="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/Activity_Question_breath_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/Activity_Question_breath_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/stopbang4question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb4" 
              android:layout_marginLeft="3dp"/>

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/Activity_Question_high_blood_pressure_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/Activity_Question_high_blood_pressure_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
			android:id="@+id/stopbang5question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb5" 
              android:layout_marginLeft="3dp"/>

        <EditText
            android:id="@+id/Activity_Question_height"
            android:layout_width="60dip"
            android:layout_height="wrap_content" 
            android:inputType="numberDecimal" />
        <!--	android:inputType="numberDecimal" : EditText를 누르면 나오는 키패드를 .이 있는 숫자로 바꾼다.
        	 	android:inputType="number" : EditText를 누르면 나오는 키패드를 숫자로 바꾼다. -->

        <EditText
            android:id="@+id/Activity_Question_weight"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/stopbang6question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb6"
              android:layout_marginLeft="3dp" />

        <EditText
            android:id="@+id/Activity_Question_age"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
 			android:id="@+id/stopbang7question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb7" 
              android:layout_marginLeft="3dp"/>

        <EditText
            android:id="@+id/Activity_Question_neck"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
			android:id="@+id/stopbang8question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb8" 
              android:layout_marginLeft="3dp"/>

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/Activity_Question_fenale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/Activity_Question_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/Activity_Question_start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/start" />

</LinearLayout>